--- a/public/index.html
+++ b/public/index.html
@@ -15,40 +15,34 @@
       <nav>
         <select id="recipeSelect"></select>
         <button id="newRecipe">New Recipe</button>
+        <p>
+            Serving Adjustment
+            <label>Half<input type="radio" name="servingSelect" value=".5"></label>
+            <label>Regular<input type="radio" name="servingSelect" value="1"></label>
+            <label>Double<input type="radio" name="servingSelect" value="2"></label>
+        </p>
       </nav>
-      <div class="recipeDisplay">
-        <h2>Recipie Title</h2>
-        <div class="summaryInfo">
-          <p class="photo">NoImage</p>
-          <p>Serves: 8</p>
-          <p>Prep Time: 10mins</p>
-          <p>Cook Time: 20 mins</p>
-        </div>
-        <div class="ingredientDisplay">
-          <h3>Ingredients</h3>
-          <ul>
-            <li>First</li>
-            <li>Second</li>
-            <li>Third</li>
-          </ul>
-        </div>
-        <div class="instructionDisplay">
-          <h3>Instructions</h3>
-          <ol>
-            <li>First</li>
-            <li>Second</li>
-            <li>Third</li>
-          </ol>
-        </div>
-      </div>
+      <div class="recipeDisplay"></div>
       <form method="post" enctype="multipart/form-data" class="inputForm">
         <label>Recipie: <input type="text" name="recipe" /></label>
         <br />
         <fieldset class="info">
           <legend>Basic Information</legend>
-          <label>Servings: <input type="text" name="servings" /></label><br />
-          <label>Prep time: <input type="number" name="prep" /></label><br />
-          <label>Cook time: <input type="number" name="cook" /></label><br />
+          <p><label>Servings: <input type="text" name="servings" /></label></p>
+          <p><label>
+            Prep time: <input type="number" step=".1" name="prep" />
+            <select name="prephm">
+              <option value="minutes">min</option>
+              <option value="hours">hr</option>
+            </select>
+          </label></p>
+          <p><label>
+            Cook time: <input type="number" step=".1" name="cook" />
+            <select name="cookhm">
+              <option value="minutes">min</option>
+              <option value="hours">hr</option>
+            </select>
+          </label></p>
         </fieldset>
         <fieldset class="ingredients">
           <legend>Ingredients</legend>
@@ -66,8 +60,7 @@
               <option>can</option>
               <option>container</option>
             </datalist>
-            <label>Ingredient: <input type="text" name="ingredients" /></label>
-            
+            <label>Ingredient: <input type="text" name="ingredients" /></label> 
           </p>
         </fieldset>
         <br />
@@ -79,9 +72,12 @@
           </ol>
         </fieldset>
         <p>
-          <label
-            >Photo<br /><input type="file" accept="image/*" name="photo"
-          /></label>
+          <label>
+            Photo<br /><input type="file" accept="image/*" name="photo"/>
+          </label>
+        </p>
+        <p>
+          <img id="imagePreview"/>
         </p>
         <input type="submit" value="submit" />
       </form>
